trying to render color to text and text to shape

--- a/examples/index.html
+++ b/examples/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <svg viewBox="0 0 300 300"><polygon points="100,150 150,50 200,150" fill="red"></polygon><text x="150" y="150" fill="white" font-size="1.6rem" text-anchor="middle">SVG_TEXT</text></svg>
+    <svg viewBox="0 0 300 300"><rect x="50" y="50" width="200" height="200" fill="black"></rect><text x="150" y="150" fill="white" font-size="1.6rem" text-anchor="middle">SVG_TEXT</text></svg>
+    </text>
+    </svg>
 </body>
 </html>
