--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <svg viewBox="0 0 300 300"><circle cx="150" cy="150" r="100" fill="red"></circle><text x="150" y="150" fill="undefined" font-size="1.6rem" text-anchor="middle">undefined</text></svg>
+    <svg viewBox="0 0 300 300"><circle cx="150" cy="150" r="100" fill="red"></circle><text x="150" y="150" fill="black" font-size="1.6rem" text-anchor="middle">JAB</text></svg>
     </text>
     </svg>
 </body>
